<resources>
    <string name="app_name">SQLiteDemo</string>

    <string name="insert">插入数据</string>

    <string name="query">查询数据</string>

    <string name="delete">删除数据</string>

    <string name="update">更新数据</string>

    <string name="id">学号</string>
    <string name="name">姓名</string>
    <string name="sex">性别</string>
    <string name="age">年龄</string>
    <string name="class_id">班级</string>

</resources>
